Sapphire/queries.css
/************************/
/* BELOW 1616px (Smaller desktops) */
/************************/

@media (max-width: 101em) {
  .section__2 .section__header {
    margin-bottom: 0;
  }
  .slider {
    max-width: 150rem;
  }
  .products {
    transform: scale(0.9);
  }

  .slider__btn-left {
    left: 4%;
  }
  .slider__btn-right {
    right: 4%;
  }

  .section__3 {
    padding-top: 0;
  }
}

/************************/
/* BELOW 1344px (Smaller desktops) */
/************************/

@media (max-width: 84em) {
  .hero {
    width: 100%;
    justify-items: center;
    column-gap: 0;
    /* padding: 4rem; */
  }

  .hero-img-1 {
    border-radius: 0;
  }

  .nav__bar {
    padding: 0;
    height: 8rem;
    padding: 2rem;
  }
}

/************************/
/* BELOW 1200px (Landscape tablets) */
/************************/

@media (max-width: 75em) {
  html {
    font-size: 56.25%;
  }

  .search__product {
    /* margin-left: -40rem;
    transform: translate(5rem, -10rem); */
  }

  .cta {
    font-size: 1.8rem;
  }

  .section__3 .grid {
    gap: 4rem;
  }
}

/************************/
/* BELOW 976px (Tablets) */
/************************/

@media (max-width: 61em) {
  /* /* .grid--4-cols,
  .grid--3-cols {
    
  } 
  
  
  .category:last-child {
    grid-column: span 2;
  }
  */
  html {
    font-size: 50%;
  }

  .search__bar {
    padding: 0 2rem;
  }

  .grid--4-cols {
    grid-template-columns: 1fr 1fr;
  }

  .heading-primary {
    font-size: 6.4rem;
  }

  .heading-secondary {
    font-size: 4.4rem;
  }

  .badges {
    margin-bottom: 3.2rem;
    column-gap: 9.6rem;
    row-gap: 6.4rem;
  }
}

/************************/
/* BELOW 864px (Tablets) */
/************************/

@media (max-width: 54em) {
  .grid--3-cols {
    grid-template-columns: repeat(2, 1fr);
  }

  .category:last-child {
    grid-column: 1/-1;
  }

  .hero {
    /* grid-template-columns: repeat(6, 1fr); */
    grid-template-columns: 1fr 1fr;
    justify-items: center;
  }
  .hero-img-1 {
    grid-row: 1/2;
    grid-column: 1/-1;
  }
  .hero-img-2,
  .hero-img-3 {
    grid-row: 2/3;
  }

  .cta {
    margin-top: 9.6rem;
  }

  .heading-secondary {
    font-size: 6.4rem;
  }

  .about-us {
    column-gap: 6.4rem;
    row-gap: 9.6rem;
  }
}

/************************/
/* BELOW 752px (Medium tablets) */
/************************/

@media (max-width: 47em) {
  .search__bar {
    height: 10rem;
    gap: 0;
  }

  .icon {
    width: 4rem;
    height: 4rem;
  }

  .badge__title {
    font-size: 2.2rem;
  }

  .badge__description {
    font-size: 1.4rem;
  }

  .badges {
    column-gap: 4.4rem;
    row-gap: 3.2rem;
  }

  .grid--3-cols {
    grid-template-columns: repeat(1, 1fr);
  }

  .section__3 .container {
    max-width: 100%;
  }

  .section__3 .grid {
    gap: 10rem;
  }

  .category {
    max-width: 50rem;
  }

  .grid--2-cols {
    grid-template-columns: 1fr;
  }

  .about-us div:nth-child(3) {
    grid-row: 4;
  }

  /* MOBILE NAVIGATION */
  /* 
  -Remove the current icon and add ionicon
  -Add 2 ionicons for opening and for closing
  -Check javascript to see what's implying
  */

  .nav__link:link {
    display: inline-block;
    width: 25rem;
    text-align: center;
  }

  .nav__bar {
    display: grid;
    place-items: center;
    grid-template-columns: 1fr 1fr 1fr;
    height: 10rem;
  }

  .nav__menu {
    flex-direction: column;
    gap: 6rem;

    opacity: 0;
    height: 0;
    /* z-index: -10; */
    /* pointer-events: none; */
    /* visibility: hidden; */

    position: fixed;
    top: 55%;
    left: 50%;
    transform: translate(-50%, -50%);
    /* transition: all 0.3s linear; */
  }

  .nav-open .nav__menu {
    opacity: 1;
    height: 100%;
    /* z-index: 99; */
    /* pointer-events: all; */
    /* visibility: visible; */
  }

  /* .nav-open .nav__item {
     width: 8rem;
  } */

  .mobile-nav {
    display: block;
    align-self: start;
    justify-self: start;
  }

  .nav-open .open__mobile-nav {
    display: none;
  }

  .nav-open .close__mobile-nav {
    display: block;
  }

  .nav-open .nav__bar {
    background-color: #fafff7;
    height: 100vh;
    width: 100%;

    position: fixed;

    z-index: 100;
  }

  .account__list {
    align-self: start;
    justify-content: end;
    justify-self: end;
  }

  .nav-open .wishlist-icon {
    justify-self: end;
    align-self: end;
  }

  .nav-open .logo-container {
    align-self: start;
    justify-self: center;
    width: 20rem;
  }

  .nav-open .header__logo {
    width: 100%;
  }

  .nav-open .nav__link:link,
  .nav-open .nav__link:visited {
    font-size: 3.8rem;
  }
}

/************************/
/* BELOW 640px (Smaller tables) */
/************************/

@media (max-width: 40em) {
  .heading-primary {
    font-size: 4.4rem;
  }

  .hero__subheading {
    font-size: 1.8rem;
  }

  .cta {
    margin-top: 4.4rem;
  }
  .footer__header {
    justify-content: center;
    padding: 6.4rem 0;

    flex-direction: column;
  }
}

/************************/
/* BELOW 544px (Mobile) */
/************************/

@media (max-width: 34em) {
  .section__header-title,
  .section__header-description {
    text-align: center;
  }

  .section__4 .grid {
    gap: 6.4rem;
  }

  /* .nav-open .logo-container {
    position: absolute;
    top: 30%;
    left: 50%;
    transform: translate(-50%, -50%);
  } */

  .about-us--title {
    font-size: 3.2rem;
    margin-bottom: 2.4rem;
    text-shadow: none;
  }

  .about-us--description {
    font-size: 1.8rem;
  }

  .about-us--img {
    width: 100%;
    transform: translateY(-3rem);
  }

  .aligning {
    display: flex;
    align-items: center;
    justify-content: center;
  }
}

/************************/
/* BELOW 480x (Mobile) */
/************************/

@media (max-width: 30em) {
  .heading-primary {
    font-size: 4.4rem;
  }

  .hero__subheading {
    display: none;
  }

  .heading-secondary {
    font-size: 4.4rem;
  }

  .cta {
    font-size: 1.6rem;
  }

  .account__list {
    flex-wrap: wrap;
    row-gap: 0;
    column-gap: 1.6rem;
  }

  .footer__links {
    width: 100%;
    padding: 0 4rem;
    display: grid;

    grid-template-columns: 1fr 1fr;
    row-gap: 6rem;
  }

  .footer__list {
    padding: 0 0 0 8rem;
  }

  .footer__list:nth-child(2) {
    padding: 0 10rem 0 0;
  }

  .newsletter__box {
    text-align: center;
  }

  .newsletter__input {
    margin-bottom: 1.6rem;
  }

  .modal {
    width: 80%;
  }
}

/************************/
/* SLIDER */
/************************/

@media (max-width: 96em) {
  /* .products {
    transform: scale(0.9);
  } */

  .product.active .slide-inner {
    transform: scale(0.95);
  }

  .slide-inner {
    transform: scale(0.8);
  }

  .slider__btn-left {
    left: 6%;
  }
  .slider__btn-right {
    right: 6%;
  }
  .dots {
    bottom: 9%;
  }
}

@media (max-width: 93em) {
  .container-L {
    padding: 0;
  }

  .slider__btn-left {
    left: 7%;
  }
  .slider__btn-right {
    right: 7%;
  }
}

@media (max-width: 78em) {
  .products {
    transform: scale(0.8);
  }

  .slider__btn-left {
    left: 8%;
  }
  .slider__btn-right {
    right: 8%;
  }
}

@media (max-width: 49em) {
  .products {
    width: 100%;
    transform: scale(0.9);
  }

  .slider__btn {
    transform: translateY(100%);
  }
}

@media (max-width: 37em) {
  /* .slider__btn {
    transform: translateY(0);
  } */
}

